[package]
name = "network"
version = "0.2.0"
authors = ["whfuyn <whfuyn@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "*"
clap = { git = "https://github.com/clap-rs/clap/" }
git-version = "*"
toml = "*"
serde = "*"
serde_derive = "*"
tonic = "0.2"
prost = "0.6"
futures = "0.3.0"
tokio = { version = "0.2", features = ["macros", "time"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
