[package]
name = "network"
version = "6.0.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2018"


[dependencies]
log = "0.4"
log4rs = { version = "1", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "0.3"
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
tonic = "0.5"
prost = "0.8"
futures = "0.3"
tokio = "1.5"
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto", branch = "v6.0.0" }
tokio-stream = { version = "0.1.5", features = ["net"] }

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
